# dual-key-remap

./: Cargo.toml  README.md  SUMMARY.md  build.bat  build.sh  config.txt
src/: config.rs  input.rs  keys.rs  main.rs  remap.rs
