[package]
name = "dual-key-remap"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
